Dev/src/PSA Reporting Expansion Pack/objects/pse__Utilization_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <formula>pse__Scheduled_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Capacity__c</fullName>
        <formula>IF(pse__Scheduled_Calendar_Hours__c&gt;0,Remaining_Capacity_hours__c/pse__Scheduled_Calendar_Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Capacity %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Capacity_hours__c</fullName>
        <description>Scheduled Calendar Hours - Total Scheduled hours, which should indicate remaining capacity (ie unassigned) hours.</description>
        <formula>pse__Scheduled_Calendar_Hours__c - (pse__Scheduled_Billable_Hours__c + pse__Scheduled_Non_Billable_Hours__c + pse__Scheduled_Excluded_Hours__c + pse__Scheduled_Credited_Hours__c+ pse__Scheduled_Held_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Calendar Hours - Total Scheduled hours, which should indicate remaining capacity (ie unassigned) hours.</inlineHelpText>
        <label>Remaining Capacity Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Hours__c</fullName>
        <description>Sum of all scheduled hours - billable, non billable, credited and excluded</description>
        <formula>pse__Scheduled_Billable_Hours__c + pse__Scheduled_Non_Billable_Hours__c + pse__Scheduled_Excluded_Hours__c + pse__Scheduled_Credited_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all scheduled hours - billable, non billable, credited and excluded</inlineHelpText>
        <label>Total Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>